# posh

./: .gitignore  ANNOTATIONS.md  Cargo.toml  README.md  annotations.md
config/: ann2.txt  annotations.txt  distributed.config  eval_annotations.txt  mount.txt  pancham.mount  sample.config  sample_proxy.config
dash/: Cargo.toml
dash/src/: lib.rs
dash/src/dag/: command.rs  mod.rs  node.rs  stream.rs
dash/src/graph/: cmd.rs  command.rs  execute.rs  filestream.rs  info.rs  mod.rs  pipe.rs  program.rs  rapper.rs  read.rs  read2.rs  stream.rs  write.rs  write2.rs
dash/src/runtime/: client.rs  mod.rs  new_client.rs  new_runtime.rs  runtime.rs  runtime_util.rs
dash/src/serialize/: mod.rs  rpc.rs
dash/src/util/: mod.rs
dash/tests/: pipe.rs  tcp.rs
dash/tests/common/: mod.rs
dash/tests/tcp_helper/: mod.rs
shell/: Cargo.toml
shell/src/: lib.rs
shell/src/annotations/: annotate.rs  annotation_parser.rs  ast.rs  examples.rs  fileinfo.rs  grammar.rs  grammar.txt  interpreter.rs  mod.rs  parser.rs  scheduler.rs  shell_interpreter.rs  shell_parse.rs  special_commands.rs
shell/src/annotations2/: annotation_parser.rs  argument_matcher.rs  cmd_parser.rs  grammar.rs  mod.rs  parser.rs
shell/src/config/: filecache.rs  fileinfo.rs  filesize.rs  mod.rs  network.rs
shell/src/interpreter/: examples.rs  interpreter.rs  mod.rs
shell/src/scheduler/: dp.rs  heuristic.rs  mod.rs
shell/src/shellparser/: mod.rs  shellparser.rs
