[package]
name = "shell"
version = "0.1.0"
authors = ["Deepti Raghavan <deeptir@cs.stanford.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dash = { path = "../dash" }
shellwords = "1.0.0"
structopt="0.2.16"
structopt-derive="0.2.16"
slog = "2.5.2"
failure = "0.1.5"
nom = "5.0.1"

