[package]
name = "shell"
version = "0.1.0"
authors = ["Deepti Raghavan <deeptir@cs.stanford.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dash = { path = "../dash" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
shellwords = "1.0.0"
structopt="0.2.16"
structopt-derive="0.2.16"
clap = "2.33.0"
failure = "0.1.5"
nom = "^4"
itertools = "0.8.0"
exitcode = "1.1.2"
glob = "0.3.0"
tracing = " 0.1.12"
tracing-subscriber = "0.1.6"
yaml-rust = "0.4.3"
walkdir = "2.3.1"

[lib]
doctest = false
